--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,28 @@
-.App {
-  text-align: center;
-}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+td, th{
+  border: solid 1px #000;
+  padding: 10px;
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.separated{
+  border-collapse: separate;
 }
-
-.App-link {
-  color: #61dafb;
+h1 span{
+  text-decoration: underline;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+img{
+  width: 140px;
+  height: 140px;
+  margin: 10px;
+}
+h3{
+  font-size: 25px;
+  margin: 7px;
+}
+p{
+  margin: 5px;
+}
+h5{
+  margin: 3px;
+  margin-left: 10px;
 }
